--- a/package.yaml
+++ b/package.yaml
@@ -52,9 +52,12 @@ dependencies:
 - scotty
 
 
-
 library:
+  when:
+    condition: false
+    other-modules: Paths_thirdServer
   source-dirs: src
+
 
 executables:
   thirdServer-exe:
