--- a/stack.yaml
+++ b/stack.yaml
@@ -39,6 +39,7 @@ extra-deps:
 - text-time-0.3.1
 - string-random-0.1.3.0
 - attoparsec-0.13.2.4
+- basic-prelude-0.7.0
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
