--- a/thirdServer.cabal
+++ b/thirdServer.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 4b46f94f3f7d60773331b98458537976e41f996e05aa46c3ee192b1c88196d61
+-- hash: 16c21153982fb95e96452ee48cf869f17f63adee4f27f4fe62eac94ebf4c18de
 
 name:           thirdServer
 version:        0.1.0.0
@@ -158,6 +158,7 @@ test-suite thirdServer-test
       Domain.Services.AuthSpec
       Domain.Services.CommonServiceSpec
       Domain.Services.FixtureDomainService
+      Domain.Types.BusinessEntity.CategorySpec
       Fixture
       Paths_thirdServer
   hs-source-dirs:
