--- a/stack.yaml
+++ b/stack.yaml
@@ -40,6 +40,7 @@ extra-deps:
 - string-random-0.1.3.0
 - attoparsec-0.13.2.4
 - basic-prelude-0.7.0
+- template-haskell-2.15.0.0
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
