add well and werror in some string

--- a/package.yaml
+++ b/package.yaml
@@ -52,6 +52,9 @@ library:
   when:
     condition: false
     other-modules: Paths_thirdServer
+  ghc-options:
+    - -Wall
+    - -Werror
   source-dirs: src
 
 
