delete PGArray from getting json data

--- a/package.yaml
+++ b/package.yaml
@@ -46,6 +46,7 @@ dependencies:
 - basic-prelude
 - strict
 - template-haskell
+- brittany
 
 
 library:
@@ -88,6 +89,7 @@ default-extensions:
 - DataKinds
 - QuasiQuotes 
 - MultiParamTypeClasses
+- RankNTypes
 
 
 tests:
